# aoh3-save-editor

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  build.sh  buildnrun.sh  main.cpp  main.h
.github/workflows/: cmake-multi-platform.yml
src/: main.cpp  main.h
src/config/: config.cpp  config.hpp
src/gui/: gui.cpp  gui.hpp  savesPanel.cpp  savesPanel.hpp
src/gui/leftPanel/: leftPanel.cpp  leftPanel.hpp
src/reader/: reader.cpp  reader.hpp
src/save/: save.cpp  save.hpp
src/utilities/: utilities.cpp  utilities.hpp
